# langfuse-synth-lender

./: .env.example  .gitignore  Dockerfile  README.md  VERIFICATION.md  WORKBENCH.md  pyproject.toml  usecase.yaml  workbench_requirements.yaml
config/: cloud-30d.yaml  cloud-demo.yaml  demo.yaml
fixtures/: golden_cases.json
prompts/: analyst_copilot.txt
src/synth/: __init__.py  agent.py  artifacts.py  cli.py  config.py  content.py  distributions.py  enrich.py  filings.py  grading.py  lfclient.py  llm.py  memo.py  models.py  pricing.py  probe.py  rng.py  script.py  state.py  target.py  timegen.py  verify.py
src/synth/certify/: __init__.py  run.py
src/synth/live/: __init__.py  app.py  dashboard.py  paths.py  prefabs.py  submit.py  theme.py
src/synth/seed/: __init__.py  annotation.py  cert_runs.py  certification.py  datasets.py  events.py  generator.py  ingest.py  prompts.py  run.py  scores.py  traces.py
src/synth/workbench/: __init__.py  catalog.py  judges.py  links.py  promote.py  registry.py  requirements.py  results.py  runner.py  signoff.py  specs.py  views.py
templates/: cert_memo.md.j2  demo_map.md.j2  demo_script.md.j2  demo_walkthrough.html.j2
tests/: golden_seed.py  test_artifacts.py  test_contract.py  test_determinism.py  test_golden_path.py  test_grading.py  test_live_base_path.py  test_llm_provider.py  test_state_location.py  test_truth_table.py  test_workbench.py
tests/golden/: lender_spool.ndjson
web/: .env.example  .gitignore  README.md  auth.ts  middleware.ts  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/auth/error/: page.tsx
web/app/auth/signin/: page.tsx
web/components/: sign-in-button.tsx
web/components/ui/: button.tsx  card.tsx
web/lib/: catalog.ts  session-token.ts
web/types/: next-auth.d.ts
workbench_evaluators/: _template.py  citation_format.py  escalation_correctness.py  numeric_accuracy.py
workbench_tasks/: default_task.py
