[project]
name = "langfuse-demo-synth-lender"
version = "0.1.0"
description = "Synthesiser for believable Langfuse demo data — regulated-lender model-certification scenario (filing copilot + certification gate)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langfuse>=4.0,<5",      # v4 Python SDK (run_experiment, prompts, datasets, api client)
    "anthropic>=0.40.0",     # live model calls at demo time (the certification run)
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "jinja2>=3.1",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
playground = [           # `synth playground` — the analyst-copilot UI + /dossier
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-multipart>=0.0.9",   # FastAPI form parsing
]

[project.scripts]
synth = "synth.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
