[project]
name = "langfuse-demo-synth-lender"
version = "0.1.0"
description = "Synthesiser for believable Langfuse demo data — regulated-lender model-certification scenario (filing copilot + certification gate)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # The shared byte-identical core (Ring 1, #31/#32): RNG/ID, pricing, distributions, the
    # Langfuse client, event emission, and the live-UI primitives now live in the lib.
    # Pinned to the release tag v0.1.0 (cut once both gold-standard kits were golden-green)
    # so this kit's vendor-approved output can't be silently rewritten by a lib change; bump
    # the pin deliberately. The repo is public, so the install is a plain pip install (the
    # Docker build installs `git` to fetch it — no build secret). langfuse below is still
    # declared directly: it is this kit's own SDK surface (run_experiment, prompts,
    # datasets), not only the lib's.
    "langfuse-synth-core @ git+https://github.com/borismichel/langfuse-synth-core@v0.1.0",
    "langfuse>=4.0,<5",      # v4 Python SDK (run_experiment, prompts, datasets, api client)
    "anthropic>=0.40.0",     # live model calls at demo time — Anthropic provider (default)
    "openai>=1.40.0",        # live model calls at demo time — OpenAI provider (LAN-378)
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "jinja2>=3.1",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
playground = [           # `synth playground` — the analyst-copilot UI + /dossier
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-multipart>=0.0.9",   # FastAPI form parsing
]
dev = [                  # dev/authoring-time only — NEVER in the runtime image (Spec A §3)
    "pytest>=8,<9",
    # Determinism golden gate + `synth-authoring freeze`. Adds the [authoring] extra on top
    # of the runtime core pin above — same ref (v0.1.0), so the gate that reproduces the
    # oracle and the core the kit runs against are the one, identical build. Bump both pins
    # together (Ring 1b, #32 cut v0.1.0), never let them drift apart.
    "langfuse-synth-core[authoring] @ git+https://github.com/borismichel/langfuse-synth-core@v0.1.0",
]

[project.scripts]
synth = "synth.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
